{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 45,
  "lineage": "551c5b9c-0e76-5d2d-9f34-3412ef2d0864",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eb13a98b2105b7e",
            "domain": "vpc",
            "id": "eipalloc-07eb13a98b2105b7e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-231-51-97.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.51.97",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d83dc533b0d6402e",
            "domain": "vpc",
            "id": "eipalloc-0d83dc533b0d6402e",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-41-61-193.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.61.193",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2b",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:internet-gateway/igw-0e448de829719a64e",
            "id": "igw-0e448de829719a64e",
            "owner_id": "409145123684",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07eb13a98b2105b7e",
            "connectivity_type": "public",
            "id": "nat-0bf5dc171b5e4b94e",
            "network_interface_id": "eni-0ac3076448cfb656b",
            "private_ip": "10.0.101.31",
            "public_ip": "44.231.51.97",
            "subnet_id": "subnet-038f851f264c034cb",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_eip.nat",
            "module.aws_instance_module.module.vpc.aws_internet_gateway.this",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d83dc533b0d6402e",
            "connectivity_type": "public",
            "id": "nat-0a2038f490bba39d7",
            "network_interface_id": "eni-026a5abd75e03102f",
            "private_ip": "10.0.102.24",
            "public_ip": "52.41.61.193",
            "subnet_id": "subnet-0987276c7a36d9cfd",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-us-west-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_eip.nat",
            "module.aws_instance_module.module.vpc.aws_internet_gateway.this",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031a9957be1b455841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf5dc171b5e4b94e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031a9957be1b45584",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_eip.nat",
            "module.aws_instance_module.module.vpc.aws_internet_gateway.this",
            "module.aws_instance_module.module.vpc.aws_nat_gateway.this",
            "module.aws_instance_module.module.vpc.aws_route_table.private",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-066d19858cc67eb551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a2038f490bba39d7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066d19858cc67eb55",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_eip.nat",
            "module.aws_instance_module.module.vpc.aws_internet_gateway.this",
            "module.aws_instance_module.module.vpc.aws_nat_gateway.this",
            "module.aws_instance_module.module.vpc.aws_route_table.private",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e448de829719a64e",
            "id": "r-rtb-0168e5368629744c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0168e5368629744c4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_internet_gateway.this",
            "module.aws_instance_module.module.vpc.aws_route_table.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:route-table/rtb-031a9957be1b45584",
            "id": "rtb-031a9957be1b45584",
            "owner_id": "409145123684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:route-table/rtb-066d19858cc67eb55",
            "id": "rtb-066d19858cc67eb55",
            "owner_id": "409145123684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:route-table/rtb-0168e5368629744c4",
            "id": "rtb-0168e5368629744c4",
            "owner_id": "409145123684",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0461cba59c6f3df2b",
            "route_table_id": "rtb-031a9957be1b45584",
            "subnet_id": "subnet-0c1d32f91853ac26b"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_route_table.private",
            "module.aws_instance_module.module.vpc.aws_subnet.private",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a834a1ae98d508",
            "route_table_id": "rtb-066d19858cc67eb55",
            "subnet_id": "subnet-03759991df08f12b3"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_route_table.private",
            "module.aws_instance_module.module.vpc.aws_subnet.private",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb9ab147f266af1c",
            "route_table_id": "rtb-0168e5368629744c4",
            "subnet_id": "subnet-038f851f264c034cb"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_route_table.public",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e96bf09f964bb55",
            "route_table_id": "rtb-0168e5368629744c4",
            "subnet_id": "subnet-0987276c7a36d9cfd"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_route_table.public",
            "module.aws_instance_module.module.vpc.aws_subnet.public",
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:subnet/subnet-0c1d32f91853ac26b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1d32f91853ac26b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409145123684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:subnet/subnet-03759991df08f12b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03759991df08f12b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409145123684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:subnet/subnet-038f851f264c034cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f851f264c034cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409145123684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:subnet/subnet-0987276c7a36d9cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0987276c7a36d9cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "409145123684",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d6e18ae411399b34"
          },
          "dependencies": [
            "module.aws_instance_module.module.vpc.aws_vpc.this",
            "module.aws_instance_module.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance_module.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.aws_instance_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:409145123684:vpc/vpc-0d6e18ae411399b34",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0856905f6b9dcb596",
            "default_route_table_id": "rtb-0dae87b4f42468db9",
            "default_security_group_id": "sg-0b7ed876aaf2dab79",
            "dhcp_options_id": "dopt-6fb3d90b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6e18ae411399b34",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dae87b4f42468db9",
            "owner_id": "409145123684",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}